--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
+        "laravel/helpers": "^1.3",
+        "laravel/passport": "^9.3",
         "laravel/tinker": "^2.0"
     },
     "require-dev": {
